<resources>
    <string name="app_name">Scissors</string>
    <string name="user_nameTV">User name</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="fPassword">Forgot password</string>
    <string name="customers">Customers</string>
    <string name="appointment">Appointment</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="nameTV">Name</string>
    <string name="familyname">Last name</string>
    <string name="businessName">Business name</string>
    <string name="phone">Phone</string>
    <string name="phonebusines">Business phone</string>
    <string name="businessAddress">Business adress</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="addCustomers">Add customers</string>
    <string name="manHaircut">Men haircut</string>
    <string name="womanHaircut">Woman haircut</string>
    <string name="time">Time</string>
    <string name="cost">Cost</string>
    <string name="messages">Messages</string>
    <string name="defaultSms">Default sms</string>
    <string name="customSms">User</string>
    <string name="systemSms">Hello \"Customer name \" ,you have haircut appointment in \"Date\" </string>
    <string name="system_sms_1_add_name">Hello </string>
    <string name="system_sms_2_add_time"> you have an haircut appointment at </string>
    <string name="system_sms_3add_business"> thank you </string>
    <string name="smstime"> Message time</string>
    <string name="customerretention">Customers \n Retention</string>
    <string name="nextturn">Next turn</string>
    <string name="newturn">New turn</string>
    <string name="stock">Stock</string>
    <string name="search">Search</string>
    <string name="phone2">Phone 2</string>
    <string name="haircutcounter">Hair cut counter</string>
    <string name="credit">Credit</string>
    <string name="saveBt">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reminder">Reminder</string>
    <string name="from"> From- </string>
    <string name="start">Start</string>
    <string name="until">Until</string>
    <string name="haircuts">Haircuts</string>
    <string name="pay">Pay</string>
    <string name="back">Back</string>
    <string name="stocklist">Stock list</string>
    <string name="product">Product</string>
    <string name="amount">Amount</string>
    <string name="today">Today</string>
    <string name="hour">Hour</string>
    <string name="free">Free</string>
    <string name="taken">Taken</string>
    <string name="freeturn">Free turn</string>
    <string name="sortBy">Sort by</string>
    <string name="all">All</string>
    <string name="chooseDate">Choose date</string>
    <string name="myProfile">My profile</string>
    <string name="workdays">Work days</string>
    <string name="myBarbershop">My barbershop</string>
    <string name="changePassword">Change password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="savePassword">Save password</string>
    <string name="repassword">Repeat password</string>
    <string name="appointmentList">Appointment</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="customerName">Customer name</string>
    <string name="appointmentSaved">Appointment saved</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="productName">Product name</string>
    <string name="empty">Empty</string>
    <string name="emptyField">Empty field</string>
    <string name="saved">Saved</string>
    <string name="failedToSave">Failed to save</string>
    <string name="appointmentsScreenTitle">Appointment</string>
    <string name="emailEx">AAA@MMM.com</string>
    <string name="send">Send</string>
    <string name="newAppointment">New \nappointment</string>
    <string name="newCustomer">New customer</string>
    <string name="error">Error</string>
    <string name="edit">Edit</string>
    <string name="incorrectPassword">Incorrect Password</string>
    <string name="enter">Enter</string>
    <string name="did">Did</string>
    <string name="heCutHisHair">He cut his hair?</string>
    <string name="sheCutHisHair">She cut her hair?</string>
    <string name="manageAppointment">Manage appointment</string>
    <string name="gatHaircut">Gat haircut</string>
    <string name="DidntGetHaircut">didnt gat haircut</string>
    <string name="theCustomerGetAnHaircut">Did the customer gat haircut?</string>
    <string name="importCustomers">Import customers</string>
    <string name="fields_are_not_full">Fields are not full</string>
    <string name="editProduct">Edit product</string>
    <string name="customerProfile">Customer profile</string>
    <string name="new_massage">New message</string>
    <string name="noCustonerNotFoundDialog">Customer details were not found</string>
    <string name="ok">Ok</string>
    <string name="phoneToShort">Phone to short.</string>
    <string name="customerPhone">Customer phone</string>
    <string name="dialogManageCustomer">Customer management</string>
    <string name="בcreateNewCustomer">Create new customer</string>
    <string name="dialogCreateNewCustomer">Create new customer</string>
    <string name="createNewCustomer">Create new customer</string>
    <string name="guest">Guest</string>
    <string name="passwordsDoNotMatch">Password do not match</string>
    <string name="passwordsTooShort">Password too short</string>
    <string name="enterPassword">Enter password</string>
    <string name="incorrectUserName">Incorrect username</string>
    <string name="notSaved">Not saved</string>
    <string name="messageToShort">Message to short</string>
    <string name="aboutContent">About</string>
    <string name="close">Close</string>
    <string name="businessPhone">Business phone</string>
    <string name="smsScheduled">A reminder has been set</string>
    <string name="wrongDate">Wrong date</string>
    <string name="startToEnd">Choose date</string>
    <string name="smsNotScheduled">Sms not scheduled!</string>
    <string name="alreadyHaveAppointment">Already have appointment</string>
    <string name="message">Message</string>
    <string name="Subject">Subject</string>
    <string name="haircutAppointment">Haircut appointment</string>
    <string name="genericFailure">Generic failure!</string>
    <string name="noService">No service!</string>
    <string name="nullPDU">Null PDU!</string>
    <string name="radioOff">Radio off!</string>
    <string name="smsDelivered">SMS delivered!</string>
    <string name="smsNotDelivered">SMS not delivered!</string>
    <string name="dbFailedToSave">Filed to save</string>
    <string name="savedToDB">Saved</string>
    <string name="title_register_activity">Register</string>
    <string name="title_login_activity">Login</string>
    <string name="title_customer_activity">Customer profile</string>
    <string name="title_settings_activity">Setting</string>
    <string name="title_stock_activity">Stock</string>
    <string name="title_user_registration_activity">Register</string>
    <string name="title_working_hours_activity">Working hours</string>
    <string name="title_fill_customers_activity">Add customer</string>
    <string name="time_and_fee_activity">Set a haircut</string>
    <string name="title_sms_settings_activity">Sms setting</string>
    <string name="title_customers_list_activity">Customers list</string>
    <string name="title_balance_activity">Balance</string>
    <string name="title_appointment_list_activity">Appointment list</string>
    <string name="title_splash_activity">Welcome</string>
    <string name="title_user_password_activity">Password</string>
    <string name="title_new_customer_activity">New customer</string>
    <string name="title_new_appointment_activity">New appointment</string>
    <string name="title_send_sms_activity">Send message</string>
    <string name="title_user_profile_activity">User profile</string>
    <string name="title_about_activity">About</string>
    <string name="title_barbershop_activity">My business</string>
    <string name="title_main_activity">Main</string>
    <string name="calc">Calc</string>
    <string name="customerDoesntExist">Customer does not exist</string>
    <string name="dateOfBirth">Birth date</string>
    <string name="customerEditActivity">Edit</string>
    <string name="customerExist">Customer exist</string>
    <string name="deleteCustomer">Delete</string>
    <string name="birthdaySms">Birthday message</string>
    <string name="longTimeNoSee">שלח הודעה ללקוחות שלא הגיעו מעל חצי שנה</string>
    <string name="generalMessageToAllCustomers">A general message to all customers</string>
    <string name="messageToAll">Message to all customers</string>
    <string name="wrongData">Wrong data</string>
    <string name="invalidMessage">Invalid message</string>
    <string name="emailSubject">תור לספר</string>
    <string name="messageSent">Message sent</string>
    <string name="aboutActivityContent">
        Version: v.1.0.0
    \n\n
        Programmers: Aviram Sharabi
    \n\n

    </string>
    <string name="picture_not_exist">Picture not exist</string>
    <string name="picture_saved">Picture saved</string>
    <string name="picture_didnt_saved">Picture didnt saved</string>
    <string name="MailCN_MailSubject">System report</string>
    <string name="allAppointments">All appointments</string>
    <string name="action_issueReport">Create report</string>
    <string name="endDate">End date</string>
    <string name="end">End</string>
    <string name="targetMail">Send to</string>
    <string name="customerSearch">Customer search</string>
    <string name="There_is_a_scheduled_appointment">There is a scheduled appointment</string>
    <string name="resatYourPassWord">Resat your password</string>
    <string name="passwordSentToYourEmail">Password sent to your Email</string>
    <string name="verificationCode">Verification code</string>
    <string name="verify">Verify</string>
    <string name="not_initialized_yet">Not initialized yet</string>
    <string name="sand_verify">Send verify</string>
    <string name="verification_code_send_to_your_email">Verification code sent to your Email</string>
    <string name="title_user_email_activity">User email</string>
    <string name="already_scheduled">Already scheduled</string>
    <string name="remainder_saved">Remainder saved</string>
    <string name="are_you_sure_you_whant_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rest">Rest</string>
    <string name="rest_Day">Rest Day</string>
    <string name="sunday_invalid_time">Sunday invalid time</string>
    <string name="monday_invalid_time">Monday invalid time</string>
    <string name="tuesday_invalid_time">Tuesday invalid time</string>
    <string name="wednesday_invalid_time">Wednesday invalid time</string>
    <string name="thursday_invalid_time">Thursday invalid time</string>
    <string name="friday_invalid_time">Friday invalid time</string>
    <string name="saturday_invalid_time">Saturday invalid time</string>
    <string name="customer_deleted">Customer Deleted</string>
    <string name="is_a_free_day">Is a Free Day</string>
    <string name="customer_is_schedule">Customer is schedule</string>
    <string name="bill_report">Bill Report</string>
</resources>