<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:icon="@drawable/about50"
        app:showAsAction="always"
        android:title="@string/about"/>

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/exit40"
        android:title="@string/logout"
        app:showAsAction="always" />


</menu>