<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.esh_tech.aviram.barbershop.LoginActivity">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="298dp"
        android:layout_height="78dp"
        app:srcCompat="?android:attr/actionModeCutDrawable"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:singleLine="true"
        android:visibility="visible"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="205dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="289dp"
        tools:layout_editor_absoluteX="67dp" />

    <EditText
        android:id="@+id/editText5"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="54dp"
        android:layout_height="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/register"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="349dp" />

    <Button
        android:id="@+id/loginBt"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="420dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="420dp" />

    <EditText
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/user_nameTV"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="162dp" />

    <EditText
        android:id="@+id/passwordTV"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password"
        tools:layout_editor_absoluteY="251dp"
        tools:layout_editor_absoluteX="148dp" />

</android.support.constraint.ConstraintLayout>
