<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.esh_tech.aviram.barbershop.SandMessageActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@color/background"
        android:gravity="start"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbPhone"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:background="@color/empty"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbEmail"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:maxLines="1"
                android:background="@color/empty"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </LinearLayout>


        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/empty"
            android:ems="10"
            android:hint="@string/message"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btSendMassage"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:onClick="onClick"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />

        <Button
            android:id="@+id/btCancel"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/cancel" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
