<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.esh_tech.aviram.barbershop.SettingsActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myProfile"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/usermale48" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/haircuts"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/barbershop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/myBarbershop"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/business48" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/workdays"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/calendar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/changePassword"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/password50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/messages"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/message50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/about50" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/logout"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButton40"
                android:layout_width="57dp"
                android:layout_height="57dp"
                app:srcCompat="@drawable/exit40" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
