<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="start"
    android:padding="10dp"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:hint="@string/productName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btMinus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/empty"
            android:padding="10dp"
            app:srcCompat="@drawable/minus48" />

        <ImageButton
            android:id="@+id/ibPlus"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/empty"
            android:padding="10dp"
            app:srcCompat="@android:drawable/ic_input_add" />

        <EditText
            android:id="@+id/etProductQuantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:padding="10dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:padding="10dp" />

</LinearLayout>